--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+boto==2.39.0
+dj-config-url==0.1.1
 Django==1.9.2
+django-storages==1.4
+gunicorn==19.4.5
+pbr==1.8.1
 Pillow==3.1.1
+requests==2.9.1
+requests-futures==0.9.7
+six==1.10.0
