--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-storages==1.4
 gunicorn==19.4.5
 pbr==1.8.1
 Pillow==3.1.1
+psycopg2==2.6.1
 requests==2.9.1
 requests-futures==0.9.7
 six==1.10.0
