--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 boto==2.39.0
 dj-config-url==0.1.1
+Django==1.9.4
+django-appconf==1.0.1
+django-geoposition==0.2.2
 django-reversion==1.10.1
 django-storages==1.4
+djangorestframework==3.3.3
 gunicorn==19.4.5
 pbr==1.8.1
 Pillow==3.1.1
