--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==1.9.4
 django-appconf==1.0.1
 django-geoposition==0.2.2
 django-reversion==1.10.1
+Django-Select2==5.8.4
 django-storages==1.4
 djangorestframework==3.3.3
 gunicorn==19.4.5
