--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 boto==2.39.0
+bottle==0.12.9
 dj-config-url==0.1.1
 Django==1.9.4
 django-appconf==1.0.1
+django-autocomplete-light==3.1.5
 django-geoposition==0.2.2
 django-reversion==1.10.1
 Django-Select2==5.8.4
@@ -14,3 +16,4 @@ psycopg2==2.6.1
 requests==2.9.1
 requests-futures==0.9.7
 six==1.10.0
+zope.interface==4.1.3
