--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ dj-config-url==0.1.1
 Django==1.9.4
 django-appconf==1.0.1
 django-autocomplete-light==3.1.5
+django-autoslug==1.9.3
+django-cities-light==3.2.0
+django-filter==0.13.0
 django-geoposition==0.2.2
 django-reversion==1.10.1
 Django-Select2==5.8.4
@@ -12,8 +15,10 @@ djangorestframework==3.3.3
 gunicorn==19.4.5
 pbr==1.8.1
 Pillow==3.1.1
+progressbar2==3.6.2
 psycopg2==2.6.1
 requests==2.9.1
 requests-futures==0.9.7
 six==1.10.0
+Unidecode==0.4.19
 zope.interface==4.1.3
