--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-filter==0.13.0
 django-geoposition==0.2.2
 django-reversion==1.10.1
 Django-Select2==5.8.4
+django-session-security==2.3.2
 django-storages==1.4
 djangorestframework==3.3.3
 gunicorn==19.4.5
@@ -17,6 +18,7 @@ pbr==1.8.1
 Pillow==3.1.1
 progressbar2==3.6.2
 psycopg2==2.6.1
+q==2.6
 requests==2.9.1
 requests-futures==0.9.7
 six==1.10.0
