--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,34 @@
-boto==2.39.0
+boto==2.40.0
 bottle==0.12.9
 dj-config-url==0.1.1
-Django==1.9.4
-django-appconf==1.0.1
-django-autocomplete-light==3.1.5
+Django==1.9.7
+django-appconf==1.0.2
+django-autocomplete-light==3.1.6
 django-autoslug==1.9.3
-django-cities-light==3.2.0
+django-cities-light==3.3.0
 django-filter==0.13.0
 django-geoposition==0.2.2
-django-reversion==1.10.1
-Django-Select2==5.8.4
+django-reversion==1.10.2
+Django-Select2==5.8.5
 django-session-security==2.3.2
-django-storages==1.4
+django-storages==1.4.1
 djangorestframework==3.3.3
-gunicorn==19.4.5
-pbr==1.8.1
-Pillow==3.1.1
+future==0.15.2
+gunicorn==19.6.0
+odfpy==0.9.6
+pbr==1.10.0
+Pillow==3.2.0
 progressbar2==3.6.2
 psycopg2==2.6.1
+pyexcel==0.2.2
+pyexcel-io==0.2.0
+pyexcel-xls==0.2.0
 q==2.6
-requests==2.9.1
+requests==2.10.0
 requests-futures==0.9.7
 six==1.10.0
+texttable==0.8.4
 Unidecode==0.4.19
+xlrd==1.0.0
+xlwt-future==0.8.0
 zope.interface==4.1.3
