--- a/requirements.txt
+++ b/requirements.txt
@@ -8,21 +8,22 @@ django-autoslug==1.9.3
 django-cities-light==3.3.0
 django-filter==0.13.0
 django-geoposition==0.2.2
-django-reversion==1.10.2
+django-reversion==2.0.0
 Django-Select2==5.8.5
 django-session-security==2.3.2
 django-storages==1.4.1
 djangorestframework==3.3.3
 future==0.15.2
 gunicorn==19.6.0
-odfpy==0.9.6
+odfpy==1.3.2
 pbr==1.10.0
 Pillow==3.2.0
-progressbar2==3.6.2
+progressbar2==3.7.0
 psycopg2==2.6.1
 pyexcel==0.2.2
 pyexcel-io==0.2.0
 pyexcel-xls==0.2.0
+python-utils==2.0.0
 q==2.6
 requests==2.10.0
 requests-futures==0.9.7
@@ -31,4 +32,4 @@ texttable==0.8.4
 Unidecode==0.4.19
 xlrd==1.0.0
 xlwt-future==0.8.0
-zope.interface==4.1.3
+zope.interface==4.2.0
