--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 boto==2.42.0
 bottle==0.12.9
 dj-config-url==0.1.1
+dj-database-url==0.4.1
 Django==1.9.8
 django-appconf==1.0.2
 django-autocomplete-light==3.1.6
@@ -18,6 +19,7 @@ gunicorn==19.6.0
 odfpy==1.3.3
 pbr==1.10.0
 Pillow==3.3.0
+pkg-resources==0.0.0
 progressbar2==3.10.0
 psycopg2==2.6.2
 pyexcel==0.2.4
