--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,24 @@ boto==2.42.0
 bottle==0.12.9
 dj-config-url==0.1.1
 dj-database-url==0.4.1
-Django==1.9.8
+Django==1.10
 django-appconf==1.0.2
-django-autocomplete-light==3.1.6
+django-autocomplete-light==3.1.8
 django-autoslug==1.9.3
 django-cities-light==3.3.0
-django-filter==0.13.0
-django-geoposition==0.2.3
-django-reversion==2.0.5
+django-filter==0.14.0
+django-geoposition==0.3.0
+django-reversion==2.0.6
 Django-Select2==5.8.6
 django-session-security==2.3.2
-django-storages==1.4.1
-djangorestframework==3.4.0
+django-storages==1.5.0
+djangorestframework==3.4.4
 future==0.15.2
 gunicorn==19.6.0
 odfpy==1.3.3
 pbr==1.10.0
 Pillow==3.3.0
+pkg-resources==0.0.0
 progressbar2==3.10.0
 psycopg2==2.6.2
 pyexcel==0.2.4
@@ -26,7 +27,7 @@ pyexcel-io==0.2.1
 pyexcel-xls==0.2.1
 python-utils==2.0.0
 q==2.6
-requests==2.10.0
+requests==2.11.0
 requests-futures==0.9.7
 six==1.10.0
 texttable==0.8.4
