--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-appconf==1.0.2
 django-autocomplete-light==3.1.6
 django-autoslug==1.9.3
 django-cities-light==3.3.0
+django-db-logger==0.1.6
 django-filter==0.13.0
 django-geoposition==0.2.3
 django-reversion==2.0.5
@@ -19,6 +20,7 @@ gunicorn==19.6.0
 odfpy==1.3.3
 pbr==1.10.0
 Pillow==3.3.0
+pkg-resources==0.0.0
 progressbar2==3.10.1
 psycopg2==2.6.2
 pyexcel==0.2.4
